--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -638,6 +638,112 @@
     </details>
 
 </section>
+          <section aria-labelledby="bolum-kisinin-haklari-3">
+    <h4 class="text-xl font-bold text-slate-600 mt-12 mb-4 border-b pb-3">Düşünce, İfade ve Dolaşım Özgürlükleri</h4>
+
+    <details id="madde-23" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 23 – Yerleşme ve Seyahat Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, yerleşme ve seyahat hürriyetine sahiptir.<br><br>
+                Yerleşme hürriyeti, suç işlenmesini önlemek, sosyal ve ekonomik gelişmeyi sağlamak, sağlıklı ve düzenli kentleşmeyi gerçekleştirmek ve kamu mallarını korumak;<br><br>
+                Seyahat hürriyeti, suç soruşturma ve kovuşturması sebebiyle ve suç işlenmesini önlemek;
+                Amaçlarıyla kanunla sınırlanabilir.<br><br>
+                Vatandaşın yurt dışına çıkma hürriyeti, ancak suç soruşturması veya kovuşturması sebebiyle <strong>hâkim kararına bağlı olarak</strong> sınırlanabilir.
+            </blockquote>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Sınırlama Sebeplerindeki Farklılıklar</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu maddedeki en önemli çeldirici, yerleşme ve seyahat hürriyetlerinin sınırlanma sebeplerini karıştırmaktır. İkisinin sebepleri farklıdır:</p>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
+                    <div>
+                        <strong class="text-amber-900">Yerleşme Hürriyeti Sınırlanabilir:</strong>
+                        <ul class="list-disc pl-5 mt-1">
+                            <li>Suç işlemeyi önlemek</li>
+                            <li>Sosyal ve ekonomik gelişmeyi sağlamak</li>
+                            <li>Sağlıklı ve düzenli kentleşme</li>
+                            <li>Kamu mallarını korumak</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <strong class="text-amber-900">Seyahat Hürriyeti Sınırlanabilir:</strong>
+                        <ul class="list-disc pl-5 mt-1">
+                            <li>Suç soruşturması ve kovuşturması</li>
+                            <li>Suç işlemeyi önlemek</li>
+                        </ul>
+                    </div>
+                </div>
+                 <p style="text-align: justify;" class="text-sm mt-4 pt-3 border-t border-amber-200"><strong>Özel Not:</strong> Vatandaşın yurt dışına çıkışının engellenmesi ise daha özel bir şarta, mutlaka <strong>HÂKİM KARARINA</strong> bağlanmıştır.</p>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-24" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 24 – Din ve Vicdan Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, vicdan, dinî inanç ve kanaat hürriyetine sahiptir.<br><br>
+                Kimse, ibadete, dinî ayin ve törenlere katılmaya, dinî inanç ve kanaatlerini açıklamaya zorlanamaz; dinî inanç ve kanaatlerinden dolayı kınanamaz ve suçlanamaz.<br><br>
+                Din kültürü ve ahlâk öğretimi ilk ve ortaöğretim kurumlarında okutulan zorunlu dersler arasında yer alır. Bunun dışındaki din eğitim ve öğretimi ancak, kişilerin kendi isteğine, küçüklerin de kanunî temsilcisinin talebine bağlıdır.
+            </blockquote>
+             <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, inanç dünyasının tamamen serbest olduğunu güvence altına alır. Kimse inancını açıklamaya zorlanamaz. Sınav için dikkat edilmesi gereken nokta, "Din Kültürü ve Ahlak Bilgisi" dersinin okullarda <strong>zorunlu</strong> olduğudur. Bunun dışındaki özel din eğitimi ise tamamen kişilerin kendi isteğine bağlıdır.</p>
+            </div>
+        </div>
+    </details>
+
+    <div class="my-4 p-4 border rounded-lg bg-red-50 border-red-200">
+        <h6 class="font-bold mb-2 flex items-center text-red-800"><span class="text-xl mr-2">⚠️</span>Karşılaştırmalı Analiz: Düşünce ve İfade Özgürlüğü</h6>
+        <p class="text-sm text-red-900" style="text-align: justify;">Sınavlarda en çok karıştırılan iki madde olan Madde 25 ve 26'yı birlikte incelemek en doğrusudur. Aralarındaki temel fark, birinin MUTLAK ve SINIRSIZ, diğerinin ise SINIRLI olmasıdır.</p>
+    </div>
+
+    <details id="madde-25" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 25 – Düşünce ve Kanaat Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, düşünce ve kanaat hürriyetine sahiptir. Her ne sebep ve amaçla olursa olsun kimse, düşünce ve kanaatlerini açıklamaya zorlanamaz; düşünce ve kanaatleri sebebiyle kınanamaz ve suçlanamaz.
+            </blockquote>
+            <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu hak, kişinin "iç dünyası" ile ilgilidir. Sadece düşünmek ve bir kanaate sahip olmak eylemini korur. Dışa vurulmadığı sürece düşüncenin bir sınırı yoktur. Bu nedenle Anayasa'daki **mutlak ve sınırsız** olan ender haklardan biridir.</p>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-26" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 26 – Düşünceyi Açıklama ve Yayma Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, düşünce ve kanaatlerini söz, yazı, resim veya başka yollarla tek başına veya toplu olarak açıklama ve yayma hakkına sahiptir...<br><br>
+                Bu hürriyetlerin kullanılması, millî güvenlik, kamu düzeni, kamu güvenliği, Cumhuriyetin temel nitelikleri ve Devletin ülkesi ve milleti ile bölünmez bütünlüğünün korunması, suçların önlenmesi, suçluların cezalandırılması, Devlet sırrı olarak usulünce belirtilmiş bilgilerin açıklanmaması, başkalarının şöhret veya haklarının, özel ve aile hayatlarının yahut kanunun öngördüğü meslek sırlarının korunması veya yargılama görevinin gereğine uygun olarak yerine getirilmesi amaçlarıyla sınırlanabilir.
+            </blockquote>
+             <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu hak, düşüncenin "dış dünyası" ile ilgilidir. Konuşma, yazma, protesto gibi eylemleri içerir. Düşünce dışa vurulduğunda başkalarını ve toplumu etkilediği için **sınırlı bir haktır.** Sınavda, bu maddedeki uzun sınırlama sebeplerini ezberlemek yerine, bu hakkın sınırlı olduğunu ve Madde 25'ten temel farkının bu olduğunu bilmek yeterlidir.</p>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-27" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 27 – Bilim ve Sanat Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, bilim ve sanatı serbestçe öğrenme ve öğretme, açıklama, yayma ve bu alanlarda her türlü araştırma hakkına sahiptir.<br><br>
+                Yayma hakkı, Anayasanın 1 inci, 2 nci ve 3 üncü maddeleri hükümlerinin değiştirilmesini sağlamak amacıyla kullanılamaz.
+            </blockquote>
+             <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bilim ve sanatı öğrenme, öğretme ve araştırma hürriyeti serbesttir. Ancak, bu özgürlük kullanılarak üretilen bir eserin **yayılması**, Anayasa'nın değiştirilemez ilk üç maddesine (Cumhuriyet, nitelikleri, bütünlüğü) saldırmak amacıyla kullanılamaz. Bu çok özel bir sınırlama sebebidir ve sınavda dikkat edilmesi gerekir.</p>
+            </div>
+        </div>
+    </details>
+</section>
                 
             </article>
         </div>
