--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -828,6 +828,49 @@
     </details>
 
 </section>
+           <section aria-labelledby="bolum-kisinin-haklari-5">
+    <h4 class="text-xl font-bold text-slate-600 mt-12 mb-4 border-b pb-3">Toplantı ve Örgütlenme Hürriyetleri</h4>
+
+    <details id="madde-33" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 33 – Dernek Kurma Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>önceden izin almaksızın</strong> dernek kurma ve bunlara üye olma ya da üyelikten çıkma hürriyetine sahiptir. Hiç kimse bir derneğe üye olmaya ve dernekte üye kalmaya zorlanamaz.<br><br>
+                Dernekler, kanunun öngördüğü hallerde <strong>hâkim kararıyla</strong> kapatılabilir veya faaliyetten alıkonulabilir. Ancak, millî güvenliğin, kamu düzeninin, suç işlenmesini veya suçun devamını önlemenin yahut yakalamanın gerektirdiği hallerde gecikmede sakınca varsa, kanunla bir merci, derneği faaliyetten men ile yetkilendirilebilir. Bu merciin kararı, <strong>yirmidört saat içinde</strong> görevli hâkimin onayına sunulur. Hâkim, kararını <strong>kırksekiz saat içinde</strong> açıklar; aksi halde, bu idarî karar kendiliğinden yürürlükten kalkar.
+            </blockquote>
+            <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Tıpkı basın gibi, dernek kurmak da "izin" sistemine değil, **"bildirim"** sistemine tabidir. Yani bir dernek kurmak için devletten izin almazsınız; kurarsınız ve gerekli belgeleri ilgili makama (Valilik) bildirirsiniz.</p>
+            </div>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Derneklerin Faaliyetten Meni ve "24/48 Kuralı"</h6>
+                <p style="text-align: justify;" class="text-sm">Bu kural artık tanıdık gelmeli! Bir derneğin kapatılması için ana kural <strong>hâkim kararıdır</strong>. Ancak istisnai ve acil durumlarda, kanunla yetkilendirilmiş bir idari merci (örn: Vali) derneği geçici olarak faaliyetten men edebilir. Bu durumda idari karar, <strong>24 saat içinde</strong> hâkime sunulur ve hâkim <strong>48 saat içinde</strong> onaylamazsa yasaklama kararı kalkar. Bu, Anayasa'nın idari keyfiliği önlemek için koyduğu önemli bir güvencedir.</p>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-34" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 34 – Toplantı ve Gösteri Yürüyüşü Düzenleme Hakkı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>önceden izin almadan, silahsız ve saldırısız</strong> toplantı ve gösteri yürüyüşü düzenleme hakkına sahiptir.
+            </blockquote>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Hakkın Kullanımının 3 Temel Şartı</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu hakkın Anayasal güvence altında kullanılabilmesi için üç temel şart vardır. Sınavda bu şartlar doğrudan sorulabilir:</p>
+                <ul class="list-none space-y-2 text-sm">
+                    <li class="flex items-start"><span class="mr-2">1.</span><div><strong>Önceden İzin Almama:</strong> Tıpkı dernek kurmak gibi, bu hak da "bildirim" esasına dayanır. Yetkili makama (Valilik/Kaymakamlık) sadece düzenleme kurulu hakkında bilgi verilir.</div></li>
+                    <li class="flex items-start"><span class="mr-2">2.</span><div><strong>Silahsız Olma:</strong> Toplantıya katılanların ateşli silah, patlayıcı madde, kesici/delici alet vb. taşımaması gerekir.</div></li>
+                    <li class="flex items-start"><span class="mr-2">3.</span><div><strong>Saldırısız Olma:</strong> Toplantının barışçıl bir amaç ve yöntemle yapılması, şiddete başvurulmaması esastır.</div></li>
+                </ul>
+            </div>
+        </div>
+    </details>
+
+</section>
                 
             </article>
         </div>
