--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -744,7 +744,7 @@
         </div>
     </details>
 </section>
-                <section aria-labelledby="bolum-kisinin-haklari-4">
+  <section aria-labelledby="bolum-kisinin-haklari-4">
     <h4 class="text-xl font-bold text-slate-600 mt-12 mb-4 border-b pb-3">Basın ve Yayın Hürriyeti</h4>
 
     <details id="madde-28" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -753,12 +753,12 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                [cite_start]<strong>Basın hürdür, sansür edilemez.</strong> Basımevi kurmak izin alma ve malî teminat yatırma şartına bağlanamaz. [cite: 196, 197]
+                <strong>Basın hürdür, sansür edilemez.</strong> Basımevi kurmak izin alma ve malî teminat yatırma şartına bağlanamaz.
                 <br><br>
-                Süreli veya süresiz yayınlar, kanunun gösterdiği suçların soruşturma veya kovuşturmasına geçilmiş olması hallerinde <strong>hâkim kararıyla</strong>; [cite_start]Devletin ülkesi ve milletiyle bölünmez bütünlüğünün, millî güvenliğin, kamu düzeninin, genel ahlâkın korunması ve suçların önlenmesi bakımından gecikmesinde sakınca bulunan hallerde de <strong>kanunun açıkça yetkili kıldığı merciin emriyle toplatılabilir.</strong> [cite: 209, 210] [cite_start]Toplatma kararı veren yetkili merci, bu kararını en geç <strong>yirmidört saat içinde</strong> yetkili hâkime bildirir; hâkim bu kararı en geç <strong>kırksekiz saat içinde</strong> onaylamazsa, toplatma kararı hükümsüz sayılır. [cite: 211, 212]
+                Süreli veya süresiz yayınlar, kanunun gösterdiği suçların soruşturma veya kovuşturmasına geçilmiş olması hallerinde <strong>hâkim kararıyla</strong>; Devletin ülkesi ve milletiyle bölünmez bütünlüğünün, millî güvenliğin, kamu düzeninin, genel ahlâkın korunması ve suçların önlenmesi bakımından gecikmesinde sakınca bulunan hallerde de <strong>kanunun açıkça yetkili kıldığı merciin emriyle toplatılabilir.</strong> Toplatma kararı veren yetkili merci, bu kararını en geç <strong>yirmidört saat içinde</strong> yetkili hâkime bildirir; hâkim bu kararı en geç <strong>kırksekiz saat içinde</strong> onaylamazsa, toplatma kararı hükümsüz sayılır.
             </blockquote>
             <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
-                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Maddenin ilk cümlesi her şeyi özetler: **Sansür yasağı**. Sansür, bir eserin yayımlanmadan *önce* devlet tarafından denetlenmesi ve engellenmesidir. Anayasamız buna kesin olarak "hayır" der. Devlet ancak eser yayımlandıktan *sonra* bir suç unsuru varsa harekete geçebilir.</p>
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Maddenin ilk cümlesi her şeyi özetler: <strong>Sansür yasağı</strong>. Sansür, bir eserin yayımlanmadan *önce* devlet tarafından denetlenmesi ve engellenmesidir. Anayasamız buna kesin olarak "hayır" der. Devlet ancak eser yayımlandıktan *sonra* bir suç unsuru varsa harekete geçebilir.</p>
             </div>
             <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Yayınların Toplatılması ve "24/48 Kuralı"</h6>
@@ -773,8 +773,8 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                [cite_start]Süreli veya süresiz yayın <strong>önceden izin alma ve malî teminat yatırma şartına bağlanamaz.</strong> [cite: 217]<br><br>
-                [cite_start]Süreli yayın çıkarabilmek için kanunun gösterdiği bilgi ve belgelerin, kanunda belirtilen yetkili mercie verilmesi yeterlidir. [cite: 218]
+                Süreli veya süresiz yayın <strong>önceden izin alma ve malî teminat yatırma şartına bağlanamaz.</strong><br><br>
+                Süreli yayın çıkarabilmek için kanunun gösterdiği bilgi ve belgelerin, kanunda belirtilen yetkili mercie verilmesi yeterlidir.
             </blockquote>
             <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
                 <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, dergi veya gazete çıkarmak için devletten "izin" alma zorunluluğu olmadığını, sadece "bildirimde" bulunmanın yeterli olduğunu belirtir. Bu, "izin sistemi" yerine **"bildirim sistemi"** ilkesidir ve basın özgürlüğünün önemli bir güvencesidir.</p>
@@ -788,7 +788,7 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                [cite_start]Kanuna uygun şekilde basın işletmesi olarak kurulan basımevi ve eklentileri ile basın araçları, <strong>suç aleti olduğu gerekçesiyle zapt ve müsadere edilemez veya işletilmekten alıkonulamaz.</strong> [cite: 225, 226]
+                Kanuna uygun şekilde basın işletmesi olarak kurulan basımevi ve eklentileri ile basın araçları, <strong>suç aleti olduğu gerekçesiyle zapt ve müsadere edilemez veya işletilmekten alıkonulamaz.</strong>
             </blockquote>
             <div class="mt-4 p-4 bg-yellow-50 border-l-4 border-yellow-400 rounded">
                  <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu</h6>
@@ -803,7 +803,7 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                [cite_start]Kişiler ve siyasî partiler, kamu tüzel kişilerinin elindeki basın dışı kitle haberleşme ve yayım araçlarından yararlanma hakkına sahiptir. [cite: 228]
+                Kişiler ve siyasî partiler, kamu tüzel kişilerinin elindeki basın dışı kitle haberleşme ve yayım araçlarından yararlanma hakkına sahiptir.
             </blockquote>
              <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
                 <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, özellikle TRT gibi kamuya ait radyo ve televizyonlardan kişilerin ve siyasi partilerin adil bir şekilde yararlanma hakkını güvence altına alır. Amaç, kamunun malı olan yayın organlarının tek bir görüşün propaganda aracına dönüşmesini engellemektir.</p>
@@ -817,8 +817,8 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                [cite_start]Düzeltme ve cevap hakkı, ancak kişilerin <strong>haysiyet ve şereflerine dokunulması</strong> veya kendileriyle ilgili <strong>gerçeğe aykırı yayınlar yapılması</strong> hallerinde tanınır ve kanunla düzenlenir. [cite: 232, 233]<br><br>
-                [cite_start]Düzeltme ve cevap yayımlanmazsa, yayımlanmasının gerekip gerekmediğine hâkim tarafından ilgilinin müracaat tarihinden itibaren en geç <strong>yedi gün</strong> içerisinde karar verilir. [cite: 234]
+                Düzeltme ve cevap hakkı, ancak kişilerin <strong>haysiyet ve şereflerine dokunulması</strong> veya kendileriyle ilgili <strong>gerçeğe aykırı yayınlar yapılması</strong> hallerinde tanınır ve kanunla düzenlenir.<br><br>
+                Düzeltme ve cevap yayımlanmazsa, yayımlanmasının gerekip gerekmediğine hâkim tarafından ilgilinin müracaat tarihinden itibaren en geç <strong>yedi gün</strong> içerisinde karar verilir.
             </blockquote>
              <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
                  <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi</h6>
