--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -710,33 +710,64 @@
             </div>
         </details>
         <details id="madde-26" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
-            <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 26 – Düşünceyi Açıklama ve Yayma Hürriyeti
-            </summary>
-            <div class="px-4 pb-4 mt-2 border-t pt-4">
-                <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                    Herkes, düşünce ve kanaatlerini söz, yazı, resim veya başka yollarla tek başına veya toplu olarak açıklama ve yayma hakkına sahiptir...<br><br>
-                    Bu hürriyetlerin kullanılması, millî güvenlik, kamu düzeni, kamu güvenliği, Cumhuriyetin temel nitelikleri ve Devletin ülkesi ve milleti ile bölünmez bütünlüğünün korunması, suçların önlenmesi, suçluların cezalandırılması, Devlet sırrı olarak usulünce belirtilmiş bilgilerin açıklanmaması, başkalarının şöhret veya haklarının, özel ve aile hayatlarının yahut kanunun öngördüğü meslek sırlarının korunması veya yargılama görevinin gereğine uygun olarak yerine getirilmesi amaçlarıyla sınırlanabilir.
-                </blockquote>
-                 <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
-                    <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu hak, düşüncenin "dış dünyası" ile ilgilidir. Konuşma, yazma, protesto gibi eylemleri içerir. Düşünce dışa vurulduğunda başkalarını ve toplumu etkilediği için **sınırlı bir haktır.** Sınavda, bu maddedeki uzun sınırlama sebeplerini ezberlemek yerine, bu hakkın sınırlı olduğunu ve Madde 25'ten temel farkının bu olduğunu bilmek yeterlidir.</p>
-                </div>
-            </div>
-        </details>
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 26 – Düşünceyi Açıklama ve Yayma Hürriyeti
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Herkes, düşünce ve kanaatlerini söz, yazı, resim veya başka yollarla tek başına veya toplu olarak açıklama ve yayma hakkına sahiptir...<br><br>
+            Bu hürriyetlerin kullanılması, millî güvenlik, kamu düzeni, kamu güvenliği, Cumhuriyetin temel nitelikleri ve Devletin ülkesi ve milleti ile bölünmez bütünlüğünün korunması, suçların önlenmesi, suçluların cezalandırılması, Devlet sırrı olarak usulünce belirtilmiş bilgilerin açıklanmaması, başkalarının şöhret veya haklarının, özel ve aile hayatlarının yahut kanunun öngördüğü meslek sırlarının korunması veya yargılama görevinin gereğine uygun olarak yerine getirilmesi amaçlarıyla sınırlanabilir.
+        </blockquote>
+         <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Sınırlama Sebepleri Şifre Çözücü</h6>
+             <p style="text-align: justify;" class="text-sm mb-3">Bu uzun listeyi ezberlemek yerine, 3 ana başlık altında gruplayarak aklınızda tutabilirsiniz:</p>
+             <div class="space-y-3 text-sm">
+                 <div>
+                     <strong class="text-amber-900">1. Devletin ve Toplumun Korunması:</strong>
+                     <ul class="list-disc pl-5 mt-1">
+                         <li>Millî güvenlik, Kamu düzeni, Kamu güvenliği</li>
+                         <li>Cumhuriyetin temel nitelikleri</li>
+                         <li>Devletin bölünmez bütünlüğü</li>
+                     </ul>
+                 </div>
+                 <div>
+                     <strong class="text-amber-900">2. Adaletin Korunması:</strong>
+                     <ul class="list-disc pl-5 mt-1">
+                         <li>Suçların önlenmesi ve suçluların cezalandırılması</li>
+                         <li>Yargılama görevinin korunması</li>
+                     </ul>
+                 </div>
+                 <div>
+                     <strong class="text-amber-900">3. Bireylerin ve Sırların Korunması:</strong>
+                     <ul class="list-disc pl-5 mt-1">
+                         <li>Başkalarının şöhret ve hakları, özel ve aile hayatı</li>
+                         <li>Meslek sırları ve Devlet sırları</li>
+                     </ul>
+                 </div>
+             </div>
+        </div>
+    </div>
+</details>
         <details id="madde-27" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
-            <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 27 – Bilim ve Sanat Hürriyeti
-            </summary>
-            <div class="px-4 pb-4 mt-2 border-t pt-4">
-                <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                    Herkes, bilim ve sanatı serbestçe öğrenme ve öğretme, açıklama, yayma ve bu alanlarda her türlü araştırma hakkına sahiptir.<br><br>
-                    Yayma hakkı, Anayasanın 1 inci, 2 nci ve 3 üncü maddeleri hükümlerinin değiştirilmesini sağlamak amacıyla kullanılamaz.
-                </blockquote>
-                 <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
-                    <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bilim ve sanatı öğrenme, öğretme ve araştırma hürriyeti serbesttir. Ancak, bu özgürlük kullanılarak üretilen bir eserin **yayılması**, Anayasa'nın değiştirilemez ilk üç maddesine (Cumhuriyet, nitelikleri, bütünlüğü) saldırmak amacıyla kullanılamaz. Bu çok özel bir sınırlama sebebidir ve sınavda dikkat edilmesi gerekir.</p>
-                </div>
-            </div>
-        </details>
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 27 – Bilim ve Sanat Hürriyeti
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Herkes, bilim ve sanatı serbestçe öğrenme ve öğretme, açıklama, yayma ve bu alanlarda her türlü araştırma hakkına sahiptir.<br><br>
+            Yayma hakkı, Anayasanın 1 inci, 2 nci ve 3 üncü maddeleri hükümlerinin değiştirilmesini sağlamak amacıyla kullanılamaz.
+        </blockquote>
+         <div class="mt-4 p-4 bg-yellow-50 border-l-4 border-yellow-400 rounded">
+             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Bilim ve Sanatın "Kırmızı Çizgisi"</h6>
+             <div class="text-sm space-y-2">
+                 <p style="text-align: justify;">Bu madde, bilim ve sanata geniş bir özgürlük alanı tanır ancak tek bir "kırmızı çizgi" çizer:</p>
+                 <p class="flex items-start"><strong class="mr-2 text-green-600">SERBEST ALAN:</strong> Bilim ve sanatı öğrenmek, öğretmek ve araştırmak tamamen serbesttir.</p>
+                 <p class="flex items-start"><strong class="mr-2 text-red-600">KIRMIZI ÇİZGİ:</strong> Ancak bu özgürlüğü kullanarak ortaya çıkardığınız eseri **yayma hakkı**, devletin temelini oluşturan Anayasa'nın ilk üç maddesine (Cumhuriyet, nitelikleri, bütünlüğü) saldırmak amacıyla **kullanılamaz**.
+                 </p>
+             </div>
+        </div>
+    </div>
+</details>
 
         <div class="mt-16 mb-6">
             <div class="inline-flex items-center px-4 py-2 bg-teal-50 text-teal-800 rounded-full border border-teal-200 shadow-sm">
