--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -747,8 +747,7 @@
              </div>
         </div>
     </div>
-</details>
-        <details id="madde-27" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+<details id="madde-27" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
         <span class="mr-3 text-xl">📘</span> Madde 27 – Bilim ve Sanat Hürriyeti
     </summary>
@@ -758,11 +757,27 @@
             Yayma hakkı, Anayasanın 1 inci, 2 nci ve 3 üncü maddeleri hükümlerinin değiştirilmesini sağlamak amacıyla kullanılamaz.
         </blockquote>
          <div class="mt-4 p-4 bg-yellow-50 border-l-4 border-yellow-400 rounded">
-             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Bilim ve Sanatın "Kırmızı Çizgisi"</h6>
-             <div class="text-sm space-y-2">
-                 <p style="text-align: justify;">Bu madde, bilim ve sanata geniş bir özgürlük alanı tanır ancak tek bir "kırmızı çizgi" çizer:</p>
-                 <p class="flex items-start"><strong class="mr-2 text-green-600">SERBEST ALAN:</strong> Bilim ve sanatı öğrenmek, öğretmek ve araştırmak tamamen serbesttir.</p>
-                 <p class="flex items-start"><strong class="mr-2 text-red-600">KIRMIZI ÇİZGİ:</strong> Ancak bu özgürlüğü kullanarak ortaya çıkardığınız eseri **yayma hakkı**, devletin temelini oluşturan Anayasa'nın ilk üç maddesine (Cumhuriyet, nitelikleri, bütünlüğü) saldırmak amacıyla **kullanılamaz**.
+             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Bilim ve Sanat Hürriyetinin Kapsamı ve Sınırı</h6>
+             <p style="text-align: justify;" class="text-sm mb-3">
+                 Bu madde, bilim ve sanata 5 temel hürriyetten oluşan geniş bir "hak paketi" sunar, ancak bu paketteki tek bir hakka çok özel bir "kırmızı çizgi" çeker.
+             </p>
+             <div class="mt-4 p-4 bg-green-50 rounded-lg border border-green-200">
+                <strong class="text-green-800">✅ Hak Paketi (Serbest Olanlar):</strong>
+                <ul class="list-disc pl-5 mt-2 text-sm text-green-900">
+                    <li>Öğrenme Hakkı</li>
+                    <li>Öğretme Hakkı</li>
+                    <li>Açıklama Hakkı</li>
+                    <li><strong>Yayma Hakkı</strong></li>
+                    <li>Araştırma Hakkı</li>
+                </ul>
+             </div>
+             <div class="mt-3 p-4 bg-red-50 rounded-lg border border-red-200">
+                 <strong class="text-red-800">⛔ Tek Kırmızı Çizgi (Sınırlı Olan):</strong>
+                 <p class="text-sm mt-2" style="text-align: justify;">
+                     Yukarıdaki pakette yer alan <strong>yayma hakkı</strong>, devletin temelini oluşturan Anayasa'nın değiştirilemez ilk üç maddesine (Cumhuriyet, nitelikleri, bütünlüğü) saldırmak amacıyla <strong>kullanılamaz.</strong>
+                 </p>
+                 <p class="text-xs italic mt-2" style="text-align: justify;">
+                     <strong>Analoji:</strong> Bu, sanatçıya "İstediğin heykeli yapabilirsin ama o heykeli Cumhuriyet'i yıkma çağrısı yapmak için şehrin meydanına dikemezsin" demek gibidir.
                  </p>
              </div>
         </div>
