--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1036,7 +1036,31 @@
     </details>
 
 </section>
-                
+                <div class="mt-16 p-6 bg-green-100 rounded-lg border-l-4 border-green-600" role="mark">
+    <h4 class="font-bold text-green-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">✅</span> İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri - Bölüm Özeti
+    </h4>
+    <p class="text-green-900 mb-4" style="text-align: justify;">
+        Bu bölümde bireyi devlete karşı koruyan, dokunulmaz bir özel alan yaratan "koruyucu hakları" ve bu hakların nasıl kullanılacağını güvence altına alan kuralları öğrendik. İşte unutmamanız gerekenler:
+    </p>
+    <ul class="list-disc pl-5 mt-2 text-green-900 space-y-3">
+        <li>
+            <strong>Kişisel Bütünlük ve Güvenlik:</strong> Yaşama hakkının Anayasa'da sayılan 5 özel istisnası (meşru müdafaa, yakalama vb.) bulunmaktadır. <strong>Angarya</strong> yasaktır ancak hükümlülerin çalıştırılması, olağanüstü hal hizmetleri gibi durumlar bu yasağın dışındadır. Gözaltı süreleri bireysel suçlarda <strong>48 saat</strong>, toplu suçlarda <strong>4 gündür</strong>.
+        </li>
+        <li>
+            <strong>Özel Hayatın Korunması:</strong> Bireyin özel hayatına, konutuna ve haberleşmesine müdahale için ana kural <strong>hâkim kararıdır</strong>. Gecikmesinde sakınca olan durumlarda yetkili merciin yazılı emri yeterli olsa da bu emir <strong>24 saat</strong> içinde hâkim onayına sunulmalı, hâkim de <strong>48 saat</strong> içinde kararını açıklamalıdır. Bu "24/48 kuralı" bu üç hak için de geçerlidir.
+        </li>
+        <li>
+            <strong>Düşünce ve İfade Alanı:</strong> <strong>Düşünce ve kanaat hürriyeti (Madde 25)</strong> mutlaktır ve sınırlanamaz. Ancak bu düşüncenin dışa vurumu olan <strong>ifade hürriyeti (Madde 26)</strong>, Anayasa'da sayılan sebeplerle sınırlanabilir.
+        </li>
+        <li>
+            <strong>Basın ve Dernek Kurma Özgürlüğü:</strong> Her ikisi de "izin sistemine" değil, **"bildirim sistemine"** tabidir. Yani, önceden izin alınmaz. Basın araçları "suç aleti" denilerek zapt edilemez. Derneklerin faaliyetten geçici men'i ve yayınların toplatılması gibi istisnai durumlarda yine **"24/48 kuralı"** devreye girer.
+        </li>
+        <li>
+            <strong>Yargısal Güvenceler:</strong> Herkes <strong>adil yargılanma</strong> ve <strong>kanuni (doğal) hâkim</strong> güvencesine sahiptir. Ceza hukukunun evrensel ilkeleri (kanunilik, masumiyet karinesi, cezaların şahsiliği vb.) anayasal koruma altındadır. Devlet, memurlarının verdiği zararı <strong>tazmin etmekle</strong> ve vatandaşları hak arama yolları hakkında <strong>bilgilendirmekle</strong> yükümlüdür.
+        </li>
+    </ul>
+</div>
             </article>
         </div>
     </main>
